<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.dabi.habitv</groupId>
	<artifactId>parent</artifactId>
	<version>4.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Parent habiTv</name>

	<modules>
		<module>fwk</module>
		<module>application</module>
		<module>plugins</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- Local Maven staging only; runtime uses FrameworkConf.UPDATE_URL (GitHub Pages). -->
		<habitv.static.repo.path>${user.home}/dev/habitv-repo/repository</habitv.static.repo.path>
	</properties>

	 <scm>
        <connection>scm:git:https://github.com/Mika3578/habitv.git</connection>
        <developerConnection>scm:git:https://github.com/Mika3578/habitv.git</developerConnection>
        <url>https://github.com/Mika3578/habitv</url>
    </scm>	
	
	<repositories>
		<repository>
			<id>habitv-static-repo</id>
			<name>Habitv public static artifact repository</name>
			<url>https://mika3578.github.io/habitv-repo/repository</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>	

	<dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>com.dabi.habitv</groupId>
			<artifactId>api</artifactId>
			<version>${project.parent.version}</version>
		</dependency>	
		<dependency>
			<groupId>com.dabi.habitv</groupId>
			<artifactId>framework</artifactId>
			<version>${project.parent.version}</version>
		</dependency>			

		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.7</version>
		</dependency>	
		
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>20.0</version>
		</dependency>
		
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.11.0</version>
		</dependency>		
		
		<dependency>
			<groupId>rome</groupId>
			<artifactId>rome</artifactId>
			<version>1.0</version>
		</dependency>		
		
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.22.2</version>
		</dependency>		
		
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.21.3</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.21.3</version>
		</dependency>			
		
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>2.3.9</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.22.0</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>		
		<dependency>
			<groupId>ch.qos.reload4j</groupId>
			<artifactId>reload4j</artifactId>
			<version>1.2.26</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
		</dependency>		
	</dependencies>	
	</dependencyManagement>
	
	<build>
		<testSourceDirectory>${project.basedir}/test</testSourceDirectory>
		<resources>
			<resource>
				<directory>img</directory>
			</resource>
			<resource>
				<directory>generated</directory>
			</resource>			
			<resource>
				<directory>src</directory>
				<includes>
					<include>**/*properties</include>
					<include>**/*fxml</include>
				</includes>
				<filtering>true</filtering>
			</resource>			
		</resources>	
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <archive>
            <index>true</index>
            <manifest>
              <addClasspath>true</addClasspath>
			  <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <version>${project.version}</version>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.1.4</version>
				<configuration>
					<deployAtEnd>true</deployAtEnd>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.5</version>
				<configuration>
					<excludes>
						<exclude>**/*PluginManagerTest.java</exclude>
						<exclude>**/MessageReceiverTest.java</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<!--
		  Deploy reactor artifacts to a local habitv-repo checkout (file:// URL).
		  Inactive unless -Pstatic-repo-deploy is set; normal builds never deploy.
		-->
		<profile>
			<id>static-repo-deploy</id>
			<properties>
				<habitv.deploy.repository.url>file:///${user.home}/dev/habitv-repo/repository</habitv.deploy.repository.url>
			</properties>
			<distributionManagement>
				<repository>
					<id>habitv-static-deploy</id>
					<name>Habitv static file repository (releases)</name>
					<url>${habitv.deploy.repository.url}</url>
				</repository>
				<snapshotRepository>
					<id>habitv-static-deploy</id>
					<name>Habitv static file repository (snapshots)</name>
					<url>${habitv.deploy.repository.url}</url>
				</snapshotRepository>
			</distributionManagement>
		</profile>
		<profile>
			<id>live-provider-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<excludes combine.self="override"/>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>static-repo-publish</id>
			<distributionManagement>
				<repository>
					<id>habitv-local</id>
					<name>Habitv local static repository</name>
					<url>file:///${habitv.static.repo.path}</url>
				</repository>
				<snapshotRepository>
					<id>habitv-local</id>
					<name>Habitv local static repository</name>
					<url>file:///${habitv.static.repo.path}</url>
				</snapshotRepository>
			</distributionManagement>
			<modules>
				<module>build/static-repo-publisher</module>
			</modules>
		</profile>
	</profiles>
</project>
